--- a/src/app/display-products/display-products.component.html
+++ b/src/app/display-products/display-products.component.html
@@ -10,16 +10,22 @@
                 <div class="modal-body ">
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-xl-6" >
-                            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" >
+                            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                                 <div class="carousel-inner">
                                     
-                                    <div >
+                                    <div class="carousel-item active">
                                         <h6 >
-                                        <img src="http://localhost:8090{{selctpr.image}}" class="card-img-top " alt="Laptop " />   </h6>                        
-            
+                                        <img src="http://localhost:8090{{frontimage.listimages}}" class="card-img-top" alt="Laptop " />   </h6>                        
                                     </div>
-                                    
-                                   
+                                    <div class="carousel-item" *ngFor="let b of images">
+                                        <h6 >
+                                        <img src="http://localhost:8090{{b.listimages}}" class="card-img-top" alt="Laptop " />   </h6>                        
+                                    </div>
+                                    <!-- <div class="carousel-item ">
+                                        <h6 >
+                                        <img src="http://localhost:8090{{selctpr.listimages}}" class="card-img-top " alt="Laptop " />   </h6>                        
+            
+                                    </div> -->
                                     <!-- <div class="carousel-item">
                                         <img src="https://source.unsplash.com/1600x900?salon,barber" class="d-block w-100" alt="...">
                                     </div> -->
@@ -242,9 +248,7 @@
                         <div >
                             <h6 >
                             <img src="http://localhost:8090{{a.image}}" class="card-img-top " alt="Laptop " />   </h6>                        
-
                         </div>
-                        
                         <div class="card-body ">
                             <div class="row justify-content-between d-flex ">
                                 <div class="col-sm-8 col-9">
