--- a/src/app/banners/banners.component.html
+++ b/src/app/banners/banners.component.html
@@ -104,7 +104,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let item of webImage | paginate: { itemsPerPage: 5, currentPage: p }">
+                <tr *ngFor="let item of webImage | paginate: { itemsPerPage: 5, currentPage: p };let i=index">
                   <td></td>
                   <td>{{ item.index }}</td>
                   <!-- <td>Slider</td> -->
