--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <!-- <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats" (click)="openOffer()">
                 <div class="card-body ">
                     <div class="row">
@@ -285,7 +285,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openMembership()">
                 <div class="card-body ">
@@ -313,7 +313,7 @@
             </div>
         </div>
     </div>
-    <div class="row" *ngIf="adminRole == 'Admin'">
+    <!-- <div class="row" *ngIf="adminRole == 'Admin'">
         <div class="col-md-6">
             <div class="card card-chart">
                 <div class="card-header">
@@ -336,7 +336,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row" *ngIf="adminRole == 'Admin'">
         <div class="col-lg-12">
             <div class="card">
@@ -751,8 +751,12 @@
             </div>
         </div>
     </div>
+   
 </div>
 
+<div style="margin-top: -93px;" *ngIf="adminRole == 'Customer'" >
+    <app-offer></app-offer>
+</div>
 <div style="margin-top: -93px;" *ngIf="adminRole == 'Admin'">
     <app-customer></app-customer>
 </div>
