Dashboard pdf code

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -335,8 +335,7 @@
                                 <th class="text-right">Actions</th>
                             </thead>
                             <tbody>
-                                <tr
-                                    *ngFor="let item of appointmentList | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+                                <tr *ngFor="let item of appointmentList | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
 
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.fname}} {{ item.lname}} </td>
@@ -349,12 +348,10 @@
                                             Completed
                                         </button>
                                     </td>
-                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{
-                                        item.totalprice }} ₹
+                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{ item.totalprice }} ₹
                                     </td>
                                     <td class="text-center">
-                                        <button class="btn btn-success" *ngIf="item.isactive==true" data-toggle="modal"
-                                            data-target="#customerPaymentModal" (click)="modeOfPayment(item)">
+                                        <button class="btn btn-success" *ngIf="item.isactive==true" data-toggle="modal" data-target="#customerPaymentModal" (click)="modeOfPayment(item)">
                                             <i class="fa fa-inr" aria-hidden="true"></i> Accept
                                         </button>
                                         <!-- <button class="btn btn-info" *ngIf="item.isactive==false" disabled>
@@ -385,8 +382,7 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="ml-md-auto">
-                            <mat-paginator [length]="appointmentList.length" [pageSize]="pageSize"
-                                [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedAppoi($event)">
+                            <mat-paginator [length]="appointmentList.length" [pageSize]="pageSize" [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedAppoi($event)">
                             </mat-paginator>
                         </div>
                     </div>
@@ -412,6 +408,7 @@
                                 <th class="text-center">Customer Name</th>
                                 <!-- <th class="text-center">Assign Team Member </th> -->
                                 <th class="text-center">Total Price</th>
+                                <th class="text-center">Bill</th>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let item of activePageDataChunkComApp  let i = index">
@@ -419,8 +416,10 @@
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.fname}} {{ item.lname}} </td>
                                     <!-- <td class="text-center">{{ item.empname }}</td> -->
-                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{
-                                        item.totalprice }} ₹
+                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{ item.totalprice }} ₹</td>
+                                    <td class="text-center">
+                                        <button type="button" class="btn btn-info btn-round ml5" (click)="generatecompateappoinmentpdf(item)"><i
+                                        class="fa fa-file-pdf-o"></i>Invoice(PDF)</button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -430,8 +429,7 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="ml-md-auto">
-                            <mat-paginator [length]="completedAppointment.length" [pageSize]="pageSize"
-                                [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedComAp($event)">
+                            <mat-paginator [length]="completedAppointment.length" [pageSize]="pageSize" [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedComAp($event)">
                             </mat-paginator>
                         </div>
                     </div>
@@ -475,8 +473,7 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="ml-md-auto">
-                            <mat-paginator [length]="enquiryList.length" [pageSize]="pageSize"
-                                [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedEnquiry($event)">
+                            <mat-paginator [length]="enquiryList.length" [pageSize]="pageSize" [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedEnquiry($event)">
                             </mat-paginator>
                         </div>
                     </div>
@@ -485,8 +482,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-notice">
             <div class="modal-content">
                 <div class="modal-header">
@@ -506,8 +502,7 @@
                                 <th class="text-center">Service Point</th>
                             </thead>
                             <tbody>
-                                <tr
-                                    *ngFor="let item of usedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
+                                <tr *ngFor="let item of usedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.servicesname}}</td>
                                     <td class="text-center">{{ item.employeename}}</td>
@@ -533,8 +528,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="fname" name="fname" disabled
-                                    value="{{totalPriceForDetails}} ₹" />
+                                <input type="text" class="form-control" id="fname" name="fname" disabled value="{{totalPriceForDetails}} ₹" />
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -543,8 +537,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="tPoints" name="tPoints" disabled
-                                    value="{{totalPointForDetails}}" />
+                                <input type="text" class="form-control" id="tPoints" name="tPoints" disabled value="{{totalPointForDetails}}" />
                             </div>
                         </div>
 
@@ -559,8 +552,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="customerPaymentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="customerPaymentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
@@ -582,19 +574,23 @@
                         </div>
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal"
-                                (click)="saveModeOfPaymentDetails('Cash')"><i class="fa fa-money"
+                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal" (click)="saveModeOfPaymentDetails('Cash')"><i class="fa fa-money"
                                     aria-hidden="true"></i> Cash</button>
                         </div>
 
-                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal"
-                                (click)="saveModeOfPaymentDetails('GPay')"><i class="fa-google-pay"
+                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal" (click)="saveModeOfPaymentDetails('GPay')"><i class="fa-google-pay"
                                     aria-hidden="true"></i>
                                 GPay</button></div>
-                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal"
-                                (click)="saveModeOfPaymentDetails('Account')"><i class="fa fa-bank"
+                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal" (click)="saveModeOfPaymentDetails('Account')"><i class="fa fa-bank"
                                     aria-hidden="true"></i>
                                 Bank AC</button></div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"><button class="btn btn-info btn-round ml5" data-dismiss="modal" (click)="generatepdf()"><i class="fa fa-file-pdf-o"></i>
+                                Invoice(PDF)</button>
+                        </div>
+                        <div class="col-sm-4"></div>
                     </div>
 
                 </div>
