--- a/src/app/display-products/display-products.component.html
+++ b/src/app/display-products/display-products.component.html
@@ -229,15 +229,14 @@
     </div>
     <div class="container-fluid searchbar">
         <div class="row">
-            <div class=" col-10 col-sm-10 col-md-10 col-xl-10 col-lg-10 ">
+            <div class=" col-11 col-sm-11 col-md-11 col-xl-11 col-lg-11 ">
                 <div class="form-group">
-                    <input type="search " class="form-control rounded " placeholder="Search... " aria-label="Search " />
+                    <input type="search" id="form1" class="form-control" placeholder="Search..."
+                    [(ngModel)]="search" (ngModelChange)="Search()" aria-label="Search" />
 
                 </div>
             </div>
-            <div class="col-2 col-sm-2 col-md-2 col-xl-2 col-lg-2 searchbutton">
-                <button class="btn btn-primary">Search</button>
-            </div>
+            
         </div>
     </div>
     <div class="container py-2 ">
